[gd_scene load_steps=19 format=3 uid="uid://blomwar878hxe"]

[ext_resource type="Script" uid="uid://cknoiaiqng8fd" path="res://scripts/gameplay/player/player.gd" id="1_wy8kx"]
[ext_resource type="Shape3D" uid="uid://b8nndsj3g1jtp" path="res://elements/gameplay/hitboxes/player/player_crouch_hitbox.tres" id="2_3yv25"]
[ext_resource type="PackedScene" uid="uid://djjra23rs0kvu" path="res://elements/systemic/debug_console.tscn" id="2_da3pq"]
[ext_resource type="CapsuleMesh" uid="uid://bpht3f6o40214" path="res://elements/gameplay/custom_meshes/player/player_model.tres" id="3_qibrs"]
[ext_resource type="Script" uid="uid://lfjces5gb62q" path="res://scripts/systemic/state machine/state_machine.gd" id="3_xftey"]
[ext_resource type="Script" uid="uid://8xn1aomj767u" path="res://scripts/gameplay/player/states/idle.gd" id="4_ajrvx"]
[ext_resource type="Script" uid="uid://dgrhew0d8n4gu" path="res://scripts/systemic/state machine/state.gd" id="5_yv1wk"]
[ext_resource type="Script" uid="uid://mjphnf8168jm" path="res://scripts/gameplay/player/states/move.gd" id="7_6hrwg"]
[ext_resource type="Script" uid="uid://bvgpbb8hw0gbg" path="res://scripts/gameplay/player/states/fall.gd" id="8_dwh4p"]
[ext_resource type="Script" uid="uid://ckx1k1w2q361i" path="res://scripts/gameplay/player/states/jump.gd" id="9_3mrmj"]
[ext_resource type="Script" uid="uid://c4bdksttgrt3c" path="res://scripts/gameplay/health_manager.gd" id="9_6hrwg"]
[ext_resource type="Script" uid="uid://cpawl44tra7kp" path="res://scripts/gameplay/player/states/crouch.gd" id="9_uamq8"]
[ext_resource type="Script" uid="uid://dml3rnyruanun" path="res://scripts/gameplay/player/cam_controller.gd" id="10_dwh4p"]
[ext_resource type="Script" uid="uid://dl3c7wqga7xv8" path="res://scripts/gameplay/player/states/player_state.gd" id="10_wxub5"]
[ext_resource type="Script" uid="uid://bubuy31p7vap1" path="res://scripts/gameplay/player/states/crouch_move.gd" id="11_3yv25"]
[ext_resource type="Shape3D" uid="uid://bpleqj8nl2dta" path="res://elements/gameplay/hitboxes/player/player_hitbox.tres" id="11_o4vxe"]
[ext_resource type="Script" uid="uid://d2f87d60i2737" path="res://scripts/gameplay/player/states/dodge.gd" id="12_o4vxe"]
[ext_resource type="CapsuleMesh" uid="uid://vkdxa42cqhhb" path="res://elements/gameplay/custom_meshes/player/player_model_crouched.tres" id="13_da3pq"]

[node name="player" type="CharacterBody3D"]
collision_layer = 3
script = ExtResource("1_wy8kx")

[node name="debug_console" parent="." instance=ExtResource("2_da3pq")]

[node name="collider" type="CollisionShape3D" parent="."]
shape = ExtResource("11_o4vxe")
debug_color = Color(0, 0.878998, 0.249062, 1)

[node name="cam_anchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51966, 0)

[node name="cam" type="Camera3D" parent="cam_anchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.18755)

[node name="model" type="MeshInstance3D" parent="."]
mesh = ExtResource("3_qibrs")

[node name="front" type="CSGBox3D" parent="model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.382527, -0.257444)
size = Vector3(0.682617, 0.137695, 0.805542)

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_xftey")
initial_state = NodePath("idle")
metadata/_custom_type_script = ExtResource("3_xftey")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("player")]
script = ExtResource("4_ajrvx")
player = NodePath("../..")
metadata/_custom_type_script = ExtResource("5_yv1wk")

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("player")]
script = ExtResource("7_6hrwg")
player = NodePath("../..")
metadata/_custom_type_script = ExtResource("5_yv1wk")

[node name="fall" type="Node" parent="state_machine" node_paths=PackedStringArray("player")]
script = ExtResource("8_dwh4p")
air_acceleration = 0.0
air_deceleration = 0.0
player = NodePath("../..")
metadata/_custom_type_script = ExtResource("5_yv1wk")

[node name="jump" type="Node" parent="state_machine" node_paths=PackedStringArray("player")]
script = ExtResource("9_3mrmj")
air_acceleration = 0.5
air_deceleration = 0.5
player = NodePath("../..")
metadata/_custom_type_script = ExtResource("5_yv1wk")

[node name="sprint" type="Node" parent="state_machine" node_paths=PackedStringArray("player")]
script = ExtResource("7_6hrwg")
speed = 25.0
player = NodePath("../..")
metadata/_custom_type_script = ExtResource("7_6hrwg")

[node name="crouch" type="Node" parent="state_machine" node_paths=PackedStringArray("player")]
script = ExtResource("9_uamq8")
normal_hitbox = ExtResource("11_o4vxe")
crouch_hitbox = ExtResource("2_3yv25")
normal_model = ExtResource("3_qibrs")
crouch_model = ExtResource("13_da3pq")
player = NodePath("../..")
metadata/_custom_type_script = ExtResource("10_wxub5")

[node name="crouch_move" type="Node" parent="state_machine" node_paths=PackedStringArray("player")]
script = ExtResource("11_3yv25")
speed = 2.5
normal_hitbox = ExtResource("11_o4vxe")
crouch_hitbox = ExtResource("2_3yv25")
normal_model = ExtResource("3_qibrs")
crouch_model = ExtResource("13_da3pq")
player = NodePath("../..")
metadata/_custom_type_script = ExtResource("10_wxub5")

[node name="dodge" type="Node" parent="state_machine"]
script = ExtResource("12_o4vxe")
metadata/_custom_type_script = ExtResource("10_wxub5")

[node name="health_manager" type="Node" parent="."]
script = ExtResource("9_6hrwg")

[node name="camera_controller" type="Node" parent="."]
script = ExtResource("10_dwh4p")
sensitivity = 10.0
